--- a/requirements-3.7.txt
+++ b/requirements-3.7.txt
@@ -5,7 +5,7 @@ colorama==0.4.4
 configparser==5.0.1
 crayons==0.4.0
 idna==2.10
-lxml==4.6.1
+lxml>=4.6.3
 macholib==1.14
 modulegraph==0.18
 Pillow>=8.1.1
